public/v/release-3.3/_sources/concepts/nitros/pynitros/tutorial_pynitros.rst.txt
Tutorial to use PyNITROS with NITROS
====================================

Overview
---------

This tutorial walks you through a graph to run PyNITROS enabled image forward node together with NITROS Bridge
:ir_repo:`NITORSBridge <isaac_ros_nitros> <isaac_ros_nitros_bridge>`
The published topic would be NITROS Image that could be consumed by other NITROS nodes.

.. note::

   if you plan to connect this launch file to another NITROS node, make 
   sure to put it to the same composable container with the NITROS Bridge node to avoid overhead of type adaptation.

Tutorial Walkthrough
--------------------

1.  Complete the :ref:`Isaac ROS NITROS Bridge tutorial <repositories_and_packages/isaac_ros_nitros/isaac_ros_nitros_bridge/index:quickstart>`.

2.  Complete the :ref:`Isaac ROS PyNITROS tutorial <repositories_and_packages/isaac_ros_nitros/isaac_ros_pynitros/index:quickstart>`.

3.  Run the following launch files to spin up a demo of this package:

      .. code:: bash

         cd /workspaces/isaac_ros-dev && \
            source install/setup.bash && \
            ros2 launch isaac_ros_pynitros isaac_ros_pynitros_to_nitros.launch.py rosbag_path:=${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_pynitros/quickstart.bag

4.  **Attach a second terminal** to the docker container:

      .. code:: bash

         cd ${ISAAC_ROS_WS}/src/isaac_ros_common && \
            ./scripts/run_dev.py -d ${HOME}/workspaces

5.  Visualize the output topic ``/output`` in RViz:

      .. code:: bash

         cd /workspaces/isaac_ros-dev/ && \
            source install/setup.bash && \
            rviz2
